--- a/Viste/Accesso/Login/createacc.ui
+++ b/Viste/Accesso/Login/createacc.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>496</width>
-    <height>490</height>
+    <width>600</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Creazione Account</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(54, 54, 54);</string>
@@ -19,7 +19,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>220</x>
      <y>100</y>
      <width>151</width>
      <height>81</height>
@@ -73,7 +73,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>260</x>
      <y>20</y>
      <width>81</width>
      <height>81</height>
@@ -83,7 +83,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../../../../../Downloads/9160316006684b2394ddc51a4ab8fa74.png</pixmap>
+    <pixmap>../../logo.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -92,7 +92,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLineEdit" name="nome">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>200</y>
      <width>271</width>
      <height>36</height>
@@ -108,7 +108,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>360</y>
      <width>271</width>
      <height>36</height>
@@ -127,7 +127,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QPushButton" name="signupbutton">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>480</x>
      <y>420</y>
      <width>81</width>
      <height>41</height>
@@ -146,7 +146,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
     <rect>
      <x>20</x>
      <y>280</y>
-     <width>191</width>
+     <width>201</width>
      <height>36</height>
     </rect>
    </property>
@@ -178,7 +178,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLineEdit" name="cognome">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>240</y>
      <width>271</width>
      <height>36</height>
@@ -194,7 +194,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLineEdit" name="cf">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>280</y>
      <width>271</width>
      <height>36</height>
@@ -227,7 +227,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
   <widget class="QLineEdit" name="telefono">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>320</y>
      <width>271</width>
      <height>36</height>
