--- a/Viste/Cliente/GUI/homepage_utente.ui
+++ b/Viste/Cliente/GUI/homepage_utente.ui
@@ -62,48 +62,6 @@
     <string>👤 Profilo</string>
    </property>
   </widget>
-  <widget class="QLabel" name="id_label">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>40</y>
-     <width>31</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>13</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font-size:14; color:white</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="id_label_to_edit">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>40</y>
-     <width>49</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>13</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
@@ -117,7 +75,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../logo.png</pixmap>
+    <pixmap>../../logo.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
