--- a/Viste/Cliente/GUI/profilo.ui
+++ b/Viste/Cliente/GUI/profilo.ui
@@ -94,9 +94,9 @@
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>300</x>
      <y>260</y>
-     <width>75</width>
+     <width>90</width>
      <height>24</height>
     </rect>
    </property>
@@ -112,9 +112,9 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>140</y>
-     <width>101</width>
-     <height>16</height>
+     <y>137</y>
+     <width>170</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -127,6 +127,9 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
    </property>
   </widget>
   <widget class="QLabel" name="id_label">
@@ -154,9 +157,9 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>110</y>
-     <width>101</width>
-     <height>16</height>
+     <y>107</y>
+     <width>170</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -169,15 +172,18 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
    </property>
   </widget>
   <widget class="QLabel" name="cognome_label_to_edit">
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>80</y>
-     <width>101</width>
-     <height>16</height>
+     <y>77</y>
+     <width>170</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -191,14 +197,17 @@
    <property name="text">
     <string/>
    </property>
+   <property name="textInteractionFlags">
+    <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+   </property>
   </widget>
   <widget class="QLabel" name="label_cognome">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>80</y>
+     <y>75</y>
      <width>81</width>
-     <height>16</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -238,9 +247,9 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>50</y>
-     <width>101</width>
-     <height>16</height>
+     <y>47</y>
+     <width>170</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -253,15 +262,18 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
    </property>
   </widget>
   <widget class="QLabel" name="id_label_to_edit">
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>20</y>
-     <width>101</width>
-     <height>16</height>
+     <y>17</y>
+     <width>170</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -274,6 +286,9 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="textInteractionFlags">
+    <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
    </property>
   </widget>
   <widget class="QLabel" name="label_cf">
