--- a/Viste/Amministratore/GUI/homepage_amministratore.ui
+++ b/Viste/Amministratore/GUI/homepage_amministratore.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>500</height>
+    <width>539</width>
+    <height>318</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,54 +16,6 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(54, 54, 54);</string>
   </property>
-  <widget class="QPushButton" name="bottone_visualizza_mezzi">
-   <property name="geometry">
-    <rect>
-     <x>335</x>
-     <y>180</y>
-     <width>235</width>
-     <height>60</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>13</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
-</string>
-   </property>
-   <property name="text">
-    <string>🛴 Visualizza Mezzi</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bottone_visualizza_clienti">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>180</y>
-     <width>235</width>
-     <height>60</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>13</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font-size:20; color:white;background-color:rgb(38, 157, 206)
-</string>
-   </property>
-   <property name="text">
-    <string>👤 Visualizza Clienti</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="id_label">
    <property name="geometry">
     <rect>
@@ -109,7 +61,7 @@
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>220</x>
      <y>40</y>
      <width>90</width>
      <height>90</height>
@@ -128,16 +80,15 @@
   <widget class="QPushButton" name="bottone_cud_cliente">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>280</y>
-     <width>235</width>
+     <x>10</x>
+     <y>220</y>
+     <width>160</width>
      <height>60</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -152,16 +103,15 @@
   <widget class="QPushButton" name="bottone_cud_mezzo">
    <property name="geometry">
     <rect>
-     <x>335</x>
-     <y>280</y>
-     <width>235</width>
+     <x>370</x>
+     <y>220</y>
+     <width>160</width>
      <height>60</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -176,16 +126,15 @@
   <widget class="QPushButton" name="bottone_visualizza_statistiche">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>380</y>
-     <width>290</width>
+     <x>190</x>
+     <y>220</y>
+     <width>160</width>
      <height>60</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
-     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -194,7 +143,8 @@
 </string>
    </property>
    <property name="text">
-    <string>📊 Visualizza Statistiche</string>
+    <string>📊 Visualizza
+       Statistiche</string>
    </property>
   </widget>
  </widget>
