--- a/Viste/Amministratore/GUI/statistiche.ui
+++ b/Viste/Amministratore/GUI/statistiche.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>525</width>
+    <width>463</width>
     <height>252</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ricevute</string>
+   <string>Statistiche</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(52, 52, 52);</string>
@@ -20,9 +20,9 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>80</y>
+     <y>75</y>
      <width>240</width>
-     <height>20</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -41,9 +41,9 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>140</y>
+     <y>135</y>
      <width>150</width>
-     <height>20</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -85,7 +85,7 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>300</x>
      <y>140</y>
      <width>150</width>
      <height>25</height>
@@ -103,7 +103,7 @@
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>360</x>
      <y>210</y>
      <width>90</width>
      <height>24</height>
