--- a/Viste/Amministratore/GUI/cud_mezzo.ui
+++ b/Viste/Amministratore/GUI/cud_mezzo.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>30</y>
+     <y>50</y>
      <width>351</width>
      <height>500</height>
     </rect>
@@ -34,7 +34,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>480</x>
-     <y>550</y>
+     <y>560</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -51,7 +51,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>30</y>
+     <y>50</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -77,7 +77,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>130</y>
+     <y>150</y>
      <width>61</width>
      <height>51</height>
     </rect>
@@ -113,7 +113,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>520</x>
-     <y>130</y>
+     <y>150</y>
      <width>61</width>
      <height>51</height>
     </rect>
@@ -140,6 +140,27 @@ color: rgb(255, 255, 255);</string>
      <width>30</width>
      <height>30</height>
     </size>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>14</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>Mezzi: </string>
    </property>
   </widget>
  </widget>
