--- a/Viste/Amministratore/GUI/modifica_mezzo.ui
+++ b/Viste/Amministratore/GUI/modifica_mezzo.ui
@@ -18,6 +18,10 @@
   <property name="windowTitle">
    <string>Modifica Mezzo</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../logo.png</normaloff>../../logo.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(52, 52, 52);
 </string>
