--- a/Viste/Accesso/GUI/login.ui
+++ b/Viste/Accesso/GUI/login.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,6 +15,11 @@
   </property>
   <property name="windowTitle">
    <string>Login</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normalon>../../logo.png</normalon>
+   </iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(54, 54, 54);</string>
