--- a/Viste/Amministratore/GUI/cud_cliente.ui
+++ b/Viste/Amministratore/GUI/cud_cliente.ui
@@ -13,6 +13,11 @@
   <property name="windowTitle">
    <string>CUD Cliente</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <selectedoff>../../logo.png</selectedoff>
+   </iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(52, 52, 52);</string>
   </property>
