--- a/Viste/Cliente/GUI/corsa.ui
+++ b/Viste/Cliente/GUI/corsa.ui
@@ -13,6 +13,11 @@
   <property name="windowTitle">
    <string>Corsa</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <disabledoff>../../logo.png</disabledoff>
+   </iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(52, 52, 52);</string>
   </property>
