--- a/Viste/Cliente/GUI/profilo.ui
+++ b/Viste/Cliente/GUI/profilo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>641</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,15 +24,16 @@
   <widget class="QPushButton" name="bottone_modifica">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>170</y>
-     <width>121</width>
+     <x>20</x>
+     <y>210</y>
+     <width>181</width>
      <height>80</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
+     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -51,15 +52,16 @@
   <widget class="QPushButton" name="bottone_visualizza_portafoglio">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>170</y>
-     <width>121</width>
+     <x>240</x>
+     <y>210</y>
+     <width>181</width>
      <height>80</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
+     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -75,15 +77,16 @@
   <widget class="QPushButton" name="bottone_visualizza_ricevute">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>170</y>
-     <width>121</width>
+     <x>450</x>
+     <y>210</y>
+     <width>181</width>
      <height>80</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>13</pointsize>
+     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -99,8 +102,8 @@
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>260</y>
+     <x>540</x>
+     <y>320</y>
      <width>90</width>
      <height>24</height>
     </rect>
@@ -116,10 +119,10 @@
   <widget class="QLabel" name="telefono_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>137</y>
-     <width>170</width>
-     <height>21</height>
+     <x>150</x>
+     <y>140</y>
+     <width>210</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -142,8 +145,8 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>31</width>
-     <height>16</height>
+     <width>41</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -161,10 +164,10 @@
   <widget class="QLabel" name="cf_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>107</y>
-     <width>170</width>
-     <height>21</height>
+     <x>150</x>
+     <y>110</y>
+     <width>210</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -185,10 +188,10 @@
   <widget class="QLabel" name="cognome_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>77</y>
-     <width>170</width>
-     <height>21</height>
+     <x>150</x>
+     <y>80</y>
+     <width>210</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -210,8 +213,8 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>75</y>
-     <width>81</width>
+     <y>80</y>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
@@ -232,8 +235,8 @@
     <rect>
      <x>20</x>
      <y>140</y>
-     <width>81</width>
-     <height>16</height>
+     <width>101</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -251,10 +254,10 @@
   <widget class="QLabel" name="nome_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>47</y>
-     <width>170</width>
-     <height>21</height>
+     <x>150</x>
+     <y>50</y>
+     <width>210</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -275,10 +278,10 @@
   <widget class="QLabel" name="id_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>17</y>
-     <width>170</width>
-     <height>21</height>
+     <x>150</x>
+     <y>20</y>
+     <width>210</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -301,8 +304,8 @@
     <rect>
      <x>20</x>
      <y>110</y>
-     <width>81</width>
-     <height>16</height>
+     <width>101</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -322,8 +325,8 @@
     <rect>
      <x>20</x>
      <y>50</y>
-     <width>51</width>
-     <height>16</height>
+     <width>71</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
