--- a/Viste/Amministratore/GUI/statistiche.ui
+++ b/Viste/Amministratore/GUI/statistiche.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>533</width>
-    <height>252</height>
+    <width>519</width>
+    <height>326</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,7 +46,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>100</y>
+     <y>140</y>
      <width>150</width>
      <height>31</height>
     </rect>
@@ -67,7 +67,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>210</y>
+     <y>290</y>
      <width>90</width>
      <height>24</height>
     </rect>
@@ -83,8 +83,8 @@
   <widget class="QLabel" name="ricavo_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>100</y>
+     <x>350</x>
+     <y>140</y>
      <width>151</width>
      <height>30</height>
     </rect>
@@ -104,8 +104,8 @@
   <widget class="QLabel" name="num_corse_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>160</y>
+     <x>350</x>
+     <y>240</y>
      <width>151</width>
      <height>30</height>
     </rect>
@@ -125,7 +125,7 @@
   <widget class="QLabel" name="tempo_label_to_edit">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>350</x>
      <y>40</y>
      <width>151</width>
      <height>30</height>
@@ -147,7 +147,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>160</y>
+     <y>240</y>
      <width>150</width>
      <height>31</height>
     </rect>
@@ -162,6 +162,90 @@
    </property>
    <property name="text">
     <string>Numero corse:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tempo_totale_label_to_edit">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>90</y>
+     <width>151</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tempo_totale_label">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>90</y>
+     <width>241</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>Tempo totale di utilizzo:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ricavo_totale_label_to_edit">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>190</y>
+     <width>151</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ricavo_totale_label">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>190</y>
+     <width>150</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>Ricavo totale:</string>
    </property>
   </widget>
  </widget>
